# python-include

./: .gitignore  README.md  pyproject.toml
include/: __init__.py  include.py
main/python_include/: __init__.py  main.py
tests/: test.py
tests/nested/: include_me.py
