[tool.poetry]
name = "python_include"
version = "2.0.0"
description = "Relative imports that actually work"
authors=[]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/python-include'
license = "MIT"
main_module_path = "main/python_include"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
pip = "20.1.1"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
